--- a/cog.yaml
+++ b/cog.yaml
@@ -1,10 +1,16 @@
 build:
   gpu: true
+  cuda: "11.6.2"
   python_version: "3.10"
   python_packages:
-    - "diffusers==0.6.0"
-    - "torch==1.12.1"
+    - "ipython==8.6.0"
+    - "diffusers==0.7.0"
+    - "torch==1.13.0 --extra-index-url=https://download.pytorch.org/whl/cu116"
+    - "torchvision==0.14.0 --extra-index-url=https://download.pytorch.org/whl/cu116"
     - "ftfy==6.1.1"
     - "scipy==1.9.0"
-    - "transformers==4.21.1"
-predict: "predict.py:Predictor"
+    - "transformers==4.24.0"
+    - "accelerate==0.12.0"
+    - "bitsandbytes==0.35.4"
+
+predict: "predictor.py:Predictor"
