--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -4,19 +4,32 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install replicate
-    - name: Install Cog
-      run: |
-        sudo curl -o /usr/local/bin/cog -L https://github.com/replicate/cog/releases/latest/download/cog_`uname -s`_`uname -m`
-        sudo chmod +x /usr/local/bin/cog
-    - name: Run Cog
-      run: |
-        cog
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install replicate
+      - name: Install Cog
+        run: |
+          sudo curl -o /usr/local/bin/cog -L https://github.com/replicate/cog/releases/latest/download/cog_`uname -s`_`uname -m`
+          sudo chmod +x /usr/local/bin/cog
+      - name: Run Cog
+        run: |
+          cog --version
+          cog
+      - name: Train model
+        env:
+          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
+        run: |
+          echo "$REPLICATE_API_TOKEN" | sed 's/^......../********/'
+          python train.py
+      - name: Push to Replicate
+        env:
+          REPLICATE_CLI_TOKEN: ${{ secrets.REPLICATE_CLI_TOKEN }}
+        run: |
+          echo "$REPLICATE_CLI_TOKEN" | sed 's/^......../********/'
+          echo "Time to cog push!"
