--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -23,11 +23,13 @@ jobs:
           cog
       - name: Train model
         env:
+          # Find this at https://replicate.com/account
           REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
         run: |
           python train.py
       - name: Log in to Replicate
         env:
+          # Find this at https://replicate.com/auth/token
           REPLICATE_CLI_TOKEN: ${{ secrets.REPLICATE_CLI_TOKEN }}
         run: |
           echo $REPLICATE_CLI_TOKEN | cog login --token-stdin
