--- a/cog.yaml
+++ b/cog.yaml
@@ -1,16 +1,15 @@
 build:
   gpu: true
-  cuda: "11.3"
+  cuda: "11.6"
   python_version: "3.10"
   python_packages:
+    - "diffusers==0.10.0"
+    - "torch==1.13.0"
+    - "torchvision==0.14.0"
     - "ftfy==6.1.1"
-    - "scipy==1.7.3"
-    - "transformers==4.24.0"
-    - "accelerate==0.12.0"
+    - "scipy==1.9.3"
+    - "transformers==4.25.1"
+    - "accelerate==0.14.0"
     - "bitsandbytes==0.35.4"
-  run:
-   - pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
-   - pip install -qq git+https://github.com/ShivamShrirao/diffusers
-  #  - pip install -q https://github.com/metrolobo/xformers_wheels/releases/download/1d31a3ac_various_6/xformers-0.0.14.dev0-cp37-cp37m-linux_x86_64.whl
 
 predict: "predictor.py:Predictor"
