--- a/cog.yaml
+++ b/cog.yaml
@@ -11,5 +11,6 @@ build:
     - "transformers==4.25.1"
     - "accelerate==0.14.0"
     - "bitsandbytes==0.35.4"
+    - "omegaconf==2.3.0"
 
 predict: "predictor.py:Predictor"
