--- a/cog.yaml
+++ b/cog.yaml
@@ -11,5 +11,7 @@ build:
     - "transformers==4.25.1"
     - "accelerate==0.14.0"
     - "bitsandbytes==0.35.4"
+  system_packages:
+    - "unzip"
 
 predict: "predictor.py:Predictor"
