--- a/cog.yaml
+++ b/cog.yaml
@@ -3,13 +3,14 @@ build:
   cuda: "11.6"
   python_version: "3.10"
   python_packages:
-    - "diffusers==0.10.0"
-    - "torch==1.13.0"
-    - "torchvision==0.14.0"
+    - "diffusers==0.15.1"
+    - "torch==2.0.0"
+    - "torchvision==0.15.1"
     - "ftfy==6.1.1"
     - "scipy==1.9.3"
     - "transformers==4.25.1"
-    - "accelerate==0.14.0"
+    - "accelerate==0.18.0"
     - "bitsandbytes==0.35.4"
+    - "xformers"
 
 predict: "predictor.py:Predictor"
