--- a/cog.yaml
+++ b/cog.yaml
@@ -14,4 +14,6 @@ build:
     - "accelerate==0.14.0"
     - "bitsandbytes==0.35.4"
     - "omegaconf==2.3.0"
+  # run:
+  #   - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.5.6/pget_linux_x86_64" && chmod +x /usr/local/bin/pget
 predict: "predictor.py:Predictor"
